登陆验证注解，结果统一返回类，异常捕获类等工具类的开发